--- a/package.json
+++ b/package.json
@@ -14,12 +14,31 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "autoprefixer": "^10.4.19",
+    "country-flag-icons": "^1.5.11",
+    "dotenv": "^16.4.5",
     "gatsby": "^5.13.3",
+    "gatsby-plugin-emotion": "^8.13.1",
+    "gatsby-plugin-layout": "^4.13.1",
     "gatsby-plugin-postcss": "^6.13.1",
+    "gatsby-plugin-react-i18next": "^3.0.1",
+    "gatsby-source-filesystem": "^5.13.1",
+    "i18next": "^22.5.1",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1",
     "tailwindcss": "^3.4.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-webpack-plugin": "^4.1.0",
+    "gatsby-plugin-eslint": "^4.0.4",
+    "gatsby-plugin-root-import": "^2.0.9",
+    "prettier": "^3.2.5"
   }
 }
