--- a/package.json
+++ b/package.json
@@ -13,23 +13,33 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
+  "browser": {
+    "fs": false,
+    "path": false
+  },
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "autoprefixer": "^10.4.19",
+    "clsx": "^2.1.1",
     "country-flag-icons": "^1.5.11",
     "dotenv": "^16.4.5",
     "gatsby": "^5.13.3",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-emotion": "^8.13.1",
+    "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-layout": "^4.13.1",
     "gatsby-plugin-postcss": "^6.13.1",
     "gatsby-plugin-react-i18next": "^3.0.1",
+    "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
     "i18next": "^22.5.1",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
+    "react-icons": "^5.2.1",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
