--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "browser": {
     "fs": false,
-    "path": false
+    "path": false,
+    "url": false
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -40,7 +41,8 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
     "react-icons": "^5.2.1",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
