--- a/package.json
+++ b/package.json
@@ -21,16 +21,20 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@react-icons/all-files": "^4.1.0",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
     "country-flag-icons": "^1.5.11",
     "dotenv": "^16.4.5",
     "gatsby": "^5.13.3",
     "gatsby-image": "^3.11.0",
+    "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-emotion": "^8.13.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-layout": "^4.13.1",
     "gatsby-plugin-postcss": "^6.13.1",
+    "gatsby-plugin-preconnect": "^1.4.0",
     "gatsby-plugin-react-i18next": "^3.0.1",
     "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-source-filesystem": "^5.13.1",
@@ -51,6 +55,7 @@
     "eslint-webpack-plugin": "^4.1.0",
     "gatsby-plugin-eslint": "^4.0.4",
     "gatsby-plugin-root-import": "^2.0.9",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.32",
     "prettier": "^3.2.5"
   }
 }
