--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
     "i18next": "^22.5.1",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
